--- a/index.html
+++ b/index.html
@@ -153,31 +153,31 @@
 
                 // Масив назв файлів .patt. Масив заповнюється в порядку додавання маркерів
                 // якщо замість .patt було додано баркод, на його місце в масив додається порожній рядок
-                const patternNames = ["01.png" ,"02.png" ,"03.png" ,"04.png" ,"05.png" ,"06.png" ,""];
+                const patternNames = ["01.png" ,"02.png" ,"03.png"];
                 // Масив баркодів, заповнюється одночасно з масивом патернів
                 // якщо замість баркоду був доданий .patt, на його місце масив додається -1
-                const patternBarcode = [-1 ,-1 ,-1 ,-1 ,-1 ,-1 ,6];
+                const patternBarcode = [1 ,2 ,3];
                 // Масив типів контенту кожного маркера, заповнюється значеннями: зображення, модель, відео
-                const modes = ["image" ,"image" ,"image" ,"image" ,"image" ,"image" ,"image"];
+                const modes = ["image" ,"image" ,"image"];
                 // Масив файлів моделей, якщо немає моделі буде додано порожній рядок
-                const modelFiles = ["" ,"" ,"" ,"" ,"" ,"" ,""];
+                const modelFiles = ["" ,"" ,""];
                 // Масив файлів зображень, якщо немає зображення буде додано також порожній рядок
-                const imageFiles = ["photo_2024-03-04_19-42-24.jpg" ,"photo_2024-03-04_20-10-03.jpg" ,"photo_2024-03-04_20-10-04.jpg" ,"" ,"" ,"" ,""];
+                const imageFiles = ["photo_2024-03-04_19-42-24.jpg" ,"photo_2024-03-04_20-10-03.jpg" ,"photo_2024-03-04_20-10-04.jpg"];
                 // Масив файлів відео, якщо немає відео буде ще один порожній рядок
-                const videoFiles = ["" ,"" ,"" ,"" ,"" ,"" ,""];
+                const videoFiles = ["" ,"" ,""];
                 // Масив файлів аудіо, якщо немає аудіо буде так само порожній рядок
-                const audioFiles = ["IMG_0904.mp3" ,"IMG_0908.mp3" ,"IMG_0906.mp3" ,"" ,"" ,"" ,""];
+                const audioFiles = ["IMG_0904.mp3" ,"IMG_0908.mp3" ,"IMG_0906.mp3"];
                 // Масив опцій повтору аудіо та відео контенту, по дефолту для всіх буде false
-                const repeatOptions = ["false" ,"false" ,"false" ,"false" ,"false" ,"false" ,"false"];
+                const repeatOptions = ["false" ,"false" ,"false" ,"false"];
 
                 // Створюємо масив для всіх маркерів
                 const markerRoots = [];
-                for (let i = 0; i < 7; i++) {
+                for (let i = 0; i < 3; i++) {
                     markerRoots[i] = new THREE.Group();
                 }
 
                 // Проходимо по кожному маркеру з масиву і додаємо його в головний контейнер
-                for (let i = 0; i < 7; i++) {
+                for (let i = 0; i < 3; i++) {
                     mainContainer.add(markerRoots[i]);
 
                     // Якщо поточний маркер – це баркод, створюємо AR контролер під баркод
