--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 // Масив файлів аудіо, якщо немає аудіо буде так само порожній рядок
                 const audioFiles = ["IMG_0904.mp3" ,"IMG_0908.mp3" ,"IMG_0906.mp3"];
                 // Масив опцій повтору аудіо та відео контенту, по дефолту для всіх буде false
-                const repeatOptions = ["false" ,"false" ,"false" ,"false"];
+                const repeatOptions = ["false" ,"false" ,"false"];
 
                 // Створюємо масив для всіх маркерів
                 const markerRoots = [];
