--- a/index.html
+++ b/index.html
@@ -22,17 +22,16 @@
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace; user-select: none; pointer-events: none;'>
 
-    <div id="access" style="top: 0; left:
-    <div id="text-wrapper" style="top:
-        text-transform: uppercase;
-        user-select: none; pointer
+  <div id="access" style="top: 0; left: 0; right:0; bottom: 0; background: #000; position: absolute; user-select: all; pointer-events: all;">
+        <div id="text-wrapper" style="top: 50%; left: 50%; position: absolute; color: #fff; transform: translate(-50%, -50%); text-align: center;
+                text-transform: uppercase; font-family: Arial, Helvetica, sans-serif; font-weight: 400; line-height: 1.5em; font-size: large; white-space: nowrap;
+                user-select: none; pointer-events: none;
             ">
-            Натисніть на екран
+              Натисніть на екран           
             <br>
-            для отримання доступу до WebAR-буклету "Логаріфмічна лінійка"
+            для отримання доступу до WebAR-буклету "Логарифмічна лінійка"
         </div>
     </div>
-
     <div id="loader" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: #fff; pointer-events: none; user-select: none;
         transition: all .2s linear; display: none;">
         <div style="left: 50%; top: 50%; position: absolute; transform: translate(-50%, -50%); text-align: center; width: 130px; height: 165px;
